# file_transfer

./: .prettierrc  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: device.rs  lib.rs  main.rs
src-tauri/src/config/: config.rs
src-tauri/src/entity/: structs.rs
src-tauri/src/response/: mod.rs  resp_data.rs  response.rs  result_code.rs  tauri_result.rs
src-tauri/src/router/: app_window.rs  file_utils.rs  mod.rs  note_book.rs
src-tauri/src/utils/: fileUtil.rs  mod.rs  regexUtil.rs
src/assets/iconfont/: iconfont.js
src/components/: AppHeader.vue  DeviceList.vue  FileTransferForm.vue  T.vue
src/entity/: FileInfo.ts  Response.ts
src/router/: index.ts
src/utils/: DirFileMenu.ts  MarkdownFile.ts  NotificationUtil.ts  StringUtil.ts
src/views/: AppAbout.vue  AppLoading.vue  Home.vue  NoteBookEdit.vue
