[package]
name = "file_transfer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "file_transfer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
regex = "1.10.5"
anyhow = "1.0.86"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta.11"
derive_more = { version = "1", features = ["full"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
